...
              >
              </Image>
          </SafeAreaView>
          <SafeAreaView style={styles.conteudo}>
            <Text variant='titleSmall'>Laboratório de CiberSegurança</Text>
            <Text variant='titleSmall'>Departamento de Computação - DC</Text>
            <Text variant='titleSmall'>Universidade Federal Rural de Pernambuco - UFRPE</Text>
            
          </SafeAreaView>
          <SafeAreaView>
            {carregando ? <ActivityIndicator animating={true} /> : null}
          </SafeAreaView>
          <SafeAreaView style={styles.botoes}>
            <Button style={styles.botao} mode="contained-tonal" disabled={desativado}
                testID='botaoProjetos'
                onPress={() => navigation.navigate('Projetos') }>
                Projetos
            </Button>
            <Button style={styles.botao} mode="contained-tonal" disabled={desativado}
                testID='botaoPessoas'
                onPress={() => navigation.navigate('Pessoas') }>
...
