...
        }
        carregarProjetos();
    }, []);
    return (
        <SafeAreaProvider>
            <SafeAreaView style={{ flex: 1 }} edges={['right', 'top', 'left']}>
                <ScrollView testID="viewProjetos">
                    {projetos.map((projeto) => {
                        return (
                            <SafeAreaView key={projeto.id}>
                                <Card style={styles.card}>
                                    <Card.Title
                                        title={projeto.titulo.toUpperCase()}
...
